[package]
name = "core-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
rocket = "0.4.10"
serde = {version="1.0.119", features=["derive"]}
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
structopt = "0.3.21"
exitfailure = "0.5.1"
dotenv = "0.15.0"
base64 = "0.13.0"
error-chain = "0.12.4"
rocket_contrib = "0.4.10"
amiquip = "0.4.0"
ethkey = "0.3.1"
ethsign = "0.8.0"
hex-slice = "0.1.4"
chrono = "0.4.19"
